# TG_My_BOT_Universal3

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt
Parse_bot/: .env
bot/core/: config.py  states.py
bot/handlers/: __init__.py  audio_download.py  image_converter.py  pornhub.py  reels.py  start.py  tiktok.py  video_circle.py  youtube.py
bot/utils/: helpers.py  image_processing.py  instagram_parser.py  processing.py
